src/objects/Promoter_io_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Promoter.io Feedbacks</relationshipLabel>
        <relationshipName>Promoter_io_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_External_ID__c</fullName>
        <label>Campaign External ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_External_ID__c</fullName>
        <label>Contact External ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Promoter.io Feedbacks</relationshipLabel>
        <relationshipName>Promoter_io_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_ID__c</fullName>
        <label>Feedback ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_URL__c</fullName>
        <label>Feedback URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Feedback_Unique_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Feedback Unique External ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posted_Date__c</fullName>
        <label>Posted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SF_Account_ID__c</fullName>
        <label>SF Account ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Contact_Id__c</fullName>
        <label>SF Contact Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Type__c</fullName>
        <label>Score Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Session_Time__c</fullName>
        <label>Session Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Store_ID__c</fullName>
        <label>Store ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Promoter.io Feedbacks</relationshipLabel>
        <relationshipName>Promoter_io_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Promoter.io Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Comment__c</columns>
        <columns>Score__c</columns>
        <columns>Score_Type__c</columns>
        <columns>Store_ID__c</columns>
        <columns>Feedback_ID__c</columns>
        <columns>Campaign_External_ID__c</columns>
        <columns>Posted_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PIO-{00000000}</displayFormat>
        <label>Promoter.io Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promoter.io Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>